# rolls-test-framework

./: .gitignore  CHECKSUMS.md  Makefile  README.md  pyproject.toml
fixtures/input/: 001.txt  003.txt
fixtures/output/: 001.txt  002.txt  003.txt
python/test/: test_fixtures.py  test_stub.py
