[tool.poetry]
name = "rolls"
version = "0.1.1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.2"
pylint = "^2.11"
pytest-cov = "^3.0"
pytest-xdist = "^2.4"
pytest-random-order = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
