[tool.poetry]
name = "rolls-test-harness"
version = "0.1.1"
description = ""
authors = ["Niall Young <5465765+niallyoung@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.2"
pylint = "^2.11"
pytest-cov = "^3.0"
pytest-xdist = "^2.4"
pytest-random-order = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
